Correcting unreadable font size on OSX
git-svn-id: https://svn.apache.org/repos/asf/maven/site/trunk@469927 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -463,8 +463,8 @@ p {
 	height: 1px;
 	background-image: url(../images/breadcrumbs.jpg);
 	padding: 5px 10px 14px 20px;
-    font-size: 8px;
-    margin: 0px;
+  font-size: smaller;
+  margin: 0px;
 }
 * html #breadcrumbs {
 	padding-bottom: 8px;
